service-platform-operations/autogen-config/kube-yamls/play/platform-example-spring/app-deployment-local.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: platform-example-spring
  namespace: play
spec:
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: platform-example-spring-app
    spec:
      containers:
        - name: platform-example-spring
          image: host.docker.internal:5000/com.jade.samples/platform-example-spring:1.0.0
          ports:
          - containerPort: 8080
