service-platform-operations/autogen-config/kube-yamls/play/platform-example-spring/app-ingress-local.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: platform-example-spring-domain
  namespace: play
spec:
  rules:
  - host: platform-example-spring.play.local.service.platform
    http:
      paths:
      - backend:
          serviceName: platform-example-spring
          servicePort: 8080
        path: /
